--- a/test/fixtures/proposals.yml
+++ b/test/fixtures/proposals.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 1
+  user: :one
   title: MyString
   body: MyText
 
 two:
-  user_id: 1
+  user: :two
   title: MyString
   body: MyText
