--- a/test/fixtures/claims.yml
+++ b/test/fixtures/claims.yml
@@ -1,19 +1,21 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  proposition_id: 1
+  proposition: :one
   claim: MyText
   data_url: MyString
   warrant: MyText
-  user_id: 1
+  user: :one
   positive: false
-  parent_id: 1
+  parent: nil
+  score_cache: -1
 
 two:
-  proposition_id: 1
+  proposition: :one
   claim: MyText
   data_url: MyString
   warrant: MyText
-  user_id: 1
-  positive: false
-  parent_id: 1
+  user: :two
+  positive: true
+  parent: nil
+  score_cache: 1
